8247522: assert(is_aligned(class_space_rs.base(), class_space_alignment)) failed: Sanity

Co-authored-by: Thomas Stuefe <thomas.stuefe@gmail.com>
Reviewed-by: stuefe, iklam